--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
 before_install:
     - "cpanm JSON"
     - "cpanm Date::Utility"
+    - "cpanm Format::Utils::Numbers"
     - "cpanm Test::FailWarnings"
     - "cpanm Test::Most"
     - "cpanm Devel::Cover::Report::Coveralls"
