--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ before_install:
     - "cpanm Test::FailWarnings"
     - "cpanm Test::Most"
     - "cpanm Devel::Cover::Report::Coveralls"
+    - "cpanm --installdeps ."
 script:
   perl Makefile.PL && make test && cover -test -report coveralls
