--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
     - "cpanm Math::Trig"
     - "cpanm List::Util"
     - "cpanm List::MoreUtils"
+    - "cpanm Test::Perl::Critic" 
     - "cpanm Devel::Cover::Report::Coveralls"
 script:
   perl Makefile.PL && make test && cover -test -report coveralls
