--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
 language: perl
 perl:
+    - "5.24"
+    - "5.22"
     - "5.20"
     - "5.18"
     - "5.16"
     - "5.14"
 before_install:
+    - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
+    - source ~/travis-perl-helpers/init
+    - build-perl
+    - perl -V
     - "cpanm --installdeps ."
     - "cpanm Date::Utility" 
     - "cpanm Format::Util::Numbers"
