--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,22 @@
+sudo: false
 language: perl
 matrix:
     fast_finish: true
 perl:
-    - "5.24"
-    - "5.22"
-    - "5.20"
-    - "5.18"
-    - "5.16"
-    - "5.14"
+   - '5.24'
+   - '5.22'
+   - '5.20'
+   - '5.18'
+   - '5.16'
+   - '5.14'
 before_install:
-    - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
-    - source ~/travis-perl-helpers/init
-    - build-perl
-    - perl -V
-    - "cpanm -n --installdeps ."
-    - "cpanm -n Date::Utility" 
-    - "cpanm -n Format::Util::Numbers"
-    - "cpanm -n Try::Tiny"
-    - "cpanm -n Math::Trig"
-    - "cpanm -n List::Util"
-    - "cpanm -n List::MoreUtils"
-    - "cpanm -n Test::Perl::Critic" 
-    - "cpanm -n Test::Requires::Git"
-    - "cpanm -n Devel::Cover::Report::Codecov"
+   - git config --global user.name "TravisCI"
+   - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
+install:
+   - cpanm --quiet --notest Dist::Zilla Dist::Zilla::App::Command::cover App::cpm Devel::Cover::Report::Codecov
+   - cpm install -w 2 --mirror=http://cpan.cpantesters.org/ -g $(dzil authordeps --missing)
+   - cpm install -w 2 --mirror=http://cpan.cpantesters.org/ -g $(dzil listdeps --author --missing)
+
 script:
-  perl Makefile.PL && PERL5OPT=-MDevel::Cover make test && cover -report codecov
+   - dzil smoke --release --author && dzil cover -test -report codecov && dzil xtest
+
